--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up PowerShell
       uses: actions/setup-powershell@v2
     - name: Run PowerShell Script
       run: |
-        Write-Host ""Hello, PowerShell CI!""
+        Write-Host "Hello, PowerShell CI!"
+
+    - name: Lint Markdown Files
+      uses: github/super-linter@v4
